groupMember add and delete function
